--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/gui.h (grub_gfxmenu_timeout_unregister): Free cb
+	descriptor.
+
+2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/gfxmenu/view.c (grub_gfxmenu_view_new): Clear
 	grub_gfxmenu_timeout_notifications.
 	(grub_gfxmenu_view_destroy): Likewise.
