--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/video/fb/fbblit.c (grub_video_fbblit_blend_BGR888_RGBA8888):
+	Fix order bug.
+	(grub_video_fbblit_blend_RGB888_RGBA8888): Likewise.
+
+2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/gui.h (grub_gfxmenu_timeout_unregister): Free cb
 	descriptor.
 
