--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/gfxmenu/gfxmenu.c (grub_gfxmenu_try): Allow specifying
+	the theme path relative to $prefix/themes.
+
+2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/video/fb/fbblit.c (grub_video_fbblit_blend_BGR888_RGBA8888):
 	Fix order bug.
 	(grub_video_fbblit_blend_RGB888_RGBA8888): Likewise.
