--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-03  Andrey Borzenkov <arvidjaar@gmail.com>
+
+	Rename grub-core/tests/checksums.c into grub-core/tests/checksums.h
+	and add it as source to functional_test module.
+
 2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/tests/video_checksum.c: Don't set GENERATE_MODE.
