--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/gettext/gettext.c: Try $lang.gmo as well.
+
+2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Fix test -a and -o precedence.
 	Reported by: adrian15.
 
