--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/normal/menu_text.c (menu_clear_timeout): Clear second
+	line of timeout as it may contain the rest of long line.
+
+2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/normal/main.c: Fix freed memory dereference.
 
 2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
