* grub-core/video/readers/jpeg.c: Use grub_dprintf for debug statements 	rather than printf. 	* grub-core/video/readers/tga.c: Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/video/readers/jpeg.c: Use grub_dprintf for debug statements
+	rather than printf.
+	* grub-core/video/readers/tga.c: Likewise.
+
+2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* tests/priority_queue_unit_test.cc: New test.
 
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
