--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/loader/linux.c: Use grub_dprintf for debug statements
+	rather than printf.
+
+2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/video/readers/jpeg.c: Use grub_dprintf for debug statements
 	rather than printf.
 	* grub-core/video/readers/tga.c: Likewise.
