Simplify few strings.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Simplify few strings.
+
+2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Mark few forgotten strings for translation.
 
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
