--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* tests/gettext_strings_test.in: A test to check for strings not
+	marked for translation.
+
+2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* autogen.sh: Exclude unused libgcrypt files from translation.
 
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
