--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/tests/setjmp_test.c: New test.
+
+2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	New variables 'net_default_*' to determine MAC/IP of default interface.
 
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
