--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/videoinfo.c: Use "paletted" rather than "packed
+	pixel".
+
+2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Menu color test.
 
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
