--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* configure.ac: Don't use extended registers on x86_64.
+	Reported by: Peter Jones.
+
+2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/term/efi/console.c: Fix compile error.
 
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
