--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-05-08  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* conf/Makefile.common: Poison float and double on non-emu.
+
+2013-05-08  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* configure.ac: Don't disable extended registers on emu.
 
 2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>
