--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-11  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/fs/hfspluscomp.c (grub_hfsplus_compress_attr): Add packed
+	attribute since structure is not necessarily aligned.
+
 2013-05-11  Andrey Borzenkov <arvidjaar@gmail.com>
 
 	* docs/grub.texi (Device syntax): Clarify description of network
