--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-05-11  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>
+
+	* grub-core/net/bootp.c (grub_cmd_bootp): Check if there is any card
+	present.
+	* include/grub/err.h (grub_err_t): New enum value GRUB_ERR_NET_NO_CARD.
+
 2013-05-11  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/tests/setjmp_test.c: Ignore missing noreturn.
