--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-05-14  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* po/exclude.pot: Add missing string "%C".
+
+2013-05-14  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* tests/util/grub-shell.in: Remove the temporary directory on grub-emu
 	after the test.
 
