--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/lib/dtc/libfdt-grub.diff: Remove extraneous uintptr_t
+	declaration.
+
 2013-05-11  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/tests/setjmp_test.c: Ignore missing noreturn.
