--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-30  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/Makefile.am: Fix compilation problem with some
+	automake versions.
+
+2013-05-30  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* configure.ac: Add Ubuntu path to unifont and report unifont path used.
 
 2013-05-30  Vladimir Serbinenko  <phcoder@gmail.com>
