--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-05-30  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Move blit and fill dispatcher to appropriate files to decrease export
+	and relocation overhead.
+
+2013-05-30  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/font/font.c, include/grub/font.h: Inline simple font
 	functions.
 
