--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-15  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* tests/grub_script_eval.in: Really add the eval test.
+
 2013-06-14  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Move flavour-specific parts out of common cpio.c file and
