--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-06-15  David Michael  <fedora.dm0@gmail.com>
+
+	* configure.ac (FREETYPE): Change AC_CHECK_PROGS to AC_CHECK_TOOLS.
+	(freetype_cflags,freetype_libs): Change freetype-config to $FREETYPE.
+
 2013-06-15  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* tests/grub_script_eval.in: Really add the eval test.
