--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-06-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Enable coreboot information commands even when not loaded as
+	coreboot payload (e.g. when loaded from SeaBIOS-as-payload).
+
 2013-06-15  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Support for cbfs. Also factor out the part which is common
