--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-06-16  Andrey Borzenkov <arvidjaar@gmail.com>
 
+	* conf/Makefile.extra-dist: Add grub-core/fs/cpio_common.c.
+
+2013-06-16  Andrey Borzenkov <arvidjaar@gmail.com>
+
 	* grub-core/disk/diskfilter.c (scan_devices): Iteratively
 	rescan diskfilter devices until nothing new is found.
 
