--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-06-25  Colin Watson  <cjwatson@ubuntu.com>
 
+	* .bzrignore: Update with a number of new test-related files.
+
+2013-06-25  Colin Watson  <cjwatson@ubuntu.com>
+
 	* util/grub-script-check.c: Fail on scripts containing no
 	commands, to guard against corrupted grub-mkconfig setups that
 	produce no useful output.
