* util/grub-mkfont.c (write_font_ascii_bitmap): Fix handling of glyphs 	not filling whole 8x16 space.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-mkfont.c (write_font_ascii_bitmap): Fix handling of glyphs
+	not filling whole 8x16 space.
+
+2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/normal/charset.c (bidi_line_wrap): Fix spurios warning.
 
 2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>
