--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-07-13  Andrey Borzenkov <arvidjaar@gmail.com>
 
+	* docs/grub.texi (Commands): Document postition parameters
+	for menuentry command.
+
+2013-07-13  Andrey Borzenkov <arvidjaar@gmail.com>
+
 	* util/grub-mknetdir.in: Remove stray line from help output.
 
 2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>
