--- a/docs/grub.texi
+++ b/docs/grub.texi
@@ -3264,7 +3264,7 @@ These commands can only be used in the menu:
 @deffn Command menuentry @var{title} @
  [@option{--class=class} @dots{}] [@option{--users=users}] @
  [@option{--unrestricted}] [@option{--hotkey=key}] [@option{--id=id}] @
- @{ @var{command}; @dots{} @}
+ [@var{arg} @dots{}] @{ @var{command}; @dots{} @}
 This defines a GRUB menu entry named @var{title}.  When this entry is
 selected from the menu, GRUB will set the @var{chosen} environment variable
 to value of @option{--id} if @option{--id} is given, execute the list of
@@ -3288,6 +3288,9 @@ The @option{--hotkey} option associates a hotkey with a menu entry.
 The @option{--id} may be used to associate unique identifier with a menu entry.
 @var{id} is string of ASCII aphanumeric characters, underscore and hyphen
 and should not start with a digit.
+
+All other arguments including @var{title} are passed as positional parameters
+when list of commands is executed with @var{title} always assigned to @code{$1}.
 @end deffn
 
 
