--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-20013-07-14  Massimo Maggi <me@massimo-maggi.eu>
+2013-07-14  Massimo Maggi <me@massimo-maggi.eu>
+
+	* grub-core/fs/zfs/zfs.c (uberblock_verify): Accept version 5000.
+	(check_pool_label): Likewise.
+	* include/grub/zfs/zfs.h: Rewrite SPA_VERSION_* macros.
+
+2013-07-14  Massimo Maggi <me@massimo-maggi.eu>
 
 	* grub-core/fs/zfs/zfsinfo.c (print_vdev_info): Fix RAIDZ reporting.
 
