--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
 
 2013-07-14  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/zfs/zfs.c: Remove brackets around return value.
+
+2013-07-14  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/zfs/zfs_lz4.c: Add missing packed attribute.
 
 2013-07-14  Vladimir Serbinenko  <phcoder@gmail.com>
