--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-14  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/fs/zfs/zfs.c: Run emacs indent on file.
+
 2013-07-14  Andrey Borzenkov <arvidjaar@gmail.com>
 
 	* grub-core/net/bootp.c: Export net_* variables.
