* grub-core/gfxmenu/gui_list.c: USe viewport when drawing strings.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-07-14  Vladimir Testov <vladimir.testov@rosalab.ru>
 
+	* grub-core/gfxmenu/gui_list.c: USe viewport when drawing strings.
+
+2013-07-14  Vladimir Testov <vladimir.testov@rosalab.ru>
+
 	* grub-core/gfxmenu/gui_list.c: Fix height calculation.
 
 2013-07-14  Vladimir Serbinenko  <phcoder@gmail.com>
