* grub-core/kern/powerpc/ieee1275/startup.S: Handle unaligned bss. 	Reported by: Paulo Flabiano Smorigo.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-07-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/kern/powerpc/ieee1275/startup.S: Handle unaligned bss.
+	Reported by: Paulo Flabiano Smorigo.
+
 2013-07-14  Vladimir Testov <vladimir.testov@rosalab.ru>
 
 	* grub-core/gfxmenu/gui_list.c: USe viewport when drawing strings.
