--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-07-20  Grégoire Sutre  <gregoire.sutre@gmail.com>
+
+	* grub-core/partmap/bsdlabel.c (netopenbsdlabel_partition_map_iterate):
+	Fix misuse of variable count.
+
 2013-07-18  Leif Lindholm  <leif.lindholm@arm.com>
 2013-07-18  Francesco Lavra  <francescolavra.fl@gmail.com>
 2013-07-18  Vladimir Serbinenko  <phcoder@gmail.com>
